Refactor licensing service domain and validation layer
- Renamed and restructured service layer for clearer naming (LicenseValidationService → LicenseEvaluationService, LicensePolicyValidator, LicenseServicePolicyValidator, etc.)
- Replaced magic strings with enums/config-backed properties (ServiceCatalogProperties)
- Refactored checksum and service version validation (parseSemanticVersion)
- Updated LicenseInfo model and UserRepositoryImpl to support new service IDs (crm, billing, reporting) and checksum fields
- Simplified functional programming usage in LicenseEvaluationServiceImpl
- Migrated Keycloak DB archive naming to licensing-keycloak.zip
- Updated README with new service IDs and corrected setup instructions

refactor/project-wide